# Web_FastAPI

./: .env.example  README.md  docker-compose.yml  main.py  pyproject.toml
docs/: conf.py
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_sources/: index.rst.txt
migrations/versions/: 03d54b452005_auth.py  7fe1d9197f5f_auth3.py  afc0718cb7e4_init.py
src/: schemas.py
src/conf/: config.py
src/database/: db.py  docker-compose.yml  models.py
src/repository/: contacts.py  users.py
src/routes/: contacts.py  users.py
src/services/: auth.py  email.py
tests/: test_unit_repository_contacts.py  test_unit_repository_users.py
